# Psychodynamics-simple-model

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  LAUNCH_NOTES.md  PHASE_HISTORY.md  SAFETY.md
docs/examples/: TRACE_CONTRAST_DEMO.md  TRACE_EXCERPTS.md
docs/history/: PHASE_HISTORY.md
psychodynamic_agent/: __init__.py  cli.py  config.py
psychodynamic_agent/affect/: __init__.py  mapper.py  output_guard.py
psychodynamic_agent/agents/: __init__.py  base.py  censor_a.py  censor_b.py  ego_agent.py  final_safety_gate.py  id_agent.py  main_ai.py
psychodynamic_agent/censoring/: __init__.py  mechanisms.py  output_guard.py  planner.py
psychodynamic_agent/defense/: __init__.py  defense_planner.py  mechanisms.py  output_guard.py
psychodynamic_agent/ego/: __init__.py  output_guard.py  reality_planner.py  strategies.py
psychodynamic_agent/id_dynamics/: __init__.py  affect_update.py  output_guard.py  private_turn_guard.py
psychodynamic_agent/llm/: __init__.py  openai_client.py  schema_sanitizer.py
tests/: test_affect_phase6b1.py  test_censor_a_phase2.py  test_censor_and_safety.py  test_censor_b_phase4.py  test_ego_phase3.py  test_id_private_turn_phase6a3.py  test_leakage_guard.py  test_no_ultimate_need_leakage.py  test_openai_schema_sanitizer.py  test_pipeline_contracts.py  test_pipeline_id_affect_state_phase6a2.py  test_pipeline_phase1_hardening.py  test_psychodynamic_trace_phase6c.py  test_redaction.py  test_schemas.py  test_superego_phase5.py  test_surface_affect_phase6e1.py  test_surface_affect_phase6e2.py
(+31 files in other folders)
